# get-all-crates

./: Cargo.toml  README.md
.github/workflows/: ci.yml  install.yml
src/: crateversion.rs  forbidden.rs  main.rs
