[package]
name = "get-all-crates"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Download .crate files of all version of all crates from crates.io"
edition = "2021"
license = "MIT"
repository = "https://github.com/dtolnay/get-all-crates"

[dependencies]
anyhow = "1"
clap = { version = "4", default-features = false, features = ["cargo", "color", "derive", "deprecated", "help", "std", "usage"] }
crypto-hash = "0.3"
futures = "0.3.7"
hex = { version = "0.4", features = ["serde"] }
memmap2 = "0.5"
num-format = "0.4"
parking_lot = "0.12"
rayon = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls", "cookies", "multipart", "gzip", "brotli", "deflate", "trust-dns"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.69"
tokio = { version = "1.21", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
url = "2"
walkdir = "2.3"
