[package]
name = "get-all-crates"
version = "0.1.21"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Download .crate files of all version of all crates from crates.io"
edition = "2021"
license = "MIT"
repository = "https://github.com/dtolnay/get-all-crates"
rust-version = "1.85"

[dependencies]
anyhow = "1.0.79"
bytes = "1"
bytesize = "2"
clap = { version = "4", default-features = false, features = ["cargo", "color", "deprecated", "derive", "help", "std", "usage"] }
crypto-hash = "0.3"
futures = "0.3.7"
hex = { version = "0.4", features = ["serde"] }
indicatif = "0.18"
memmap2 = "0.9"
num-format = "0.4"
parking_lot = "0.12"
rayon = "1"
reqwest = { version = "0.13", default-features = false, features = ["brotli", "cookies", "deflate", "gzip", "json", "multipart", "rustls", "stream", "hickory-dns"] }
semver = "1"
serde = "1.0.194"
serde_derive = "1.0.194"
serde_json = "1.0.110"
tokio = { version = "1.21", features = ["full"] }
tracing = "0.1.29"
tracing-indicatif = "0.3.10"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
url = "2"
walkdir = "2.3"
